# gau2grid

./: .travis.yml  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.cfg
.github/workflows/: wheels.yml
gau2grid/tests/: test_c_code.py
