[build-system]
# NumPy required during the C code generation step
requires = ["scikit-build-core", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "gau2grid"
description = "Fast computation of a gaussian and its derivative on a grid"
version = "3.0.0"
readme = "README.md"
authors = [
    { name = "Daniel G. A. Smith" },
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = ["numpy"]

[project.optional-dependencies]
test = ["pytest"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-command = "python -m pytest {project}/tests"
test-extras = ["test"]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "gau2grid/_version.py",
]
